<resources>
    <string name="app_name">Quiz</string>
    <string name="enter_name">enter name</string>
    <string name="enter_name">enter name</string>
    <string name="quiz_registration">Quiz Registration</string>
    <string name="enter_email">enter email</string>
    <string name="enter_mobile">enter mobile</string>
    <string name="enter_mobileNo">enter mobileNo</string>
    <string name="submit">SUBMIT</string>
    <string name="select_subject">select subject</string>
    <string name="math">math</string>
    <string name="computer">computer</string>
    <string name="english">english</string>
    <string name="physics">physics</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_one_is_even_number">Which one is even number?</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="which_one_is_prime_number">Which one is prime number?</string>
    <string name="which_is_greater_than_4">Which is greater than 4?</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="which_is_smallest">Which is smallest</string>
    <string name="_4">4</string>
    <string name="combine_terms_12a_26b_4b_16a">Combine terms: 12a+26b-4b-16a</string>
    <string name="_4a_22b">4a+22b</string>
    <string name="_4a_22b">4a+22b</string>
    <string name="_28a_30b">-28a+30b</string>
    <string name="_6a_9b">6a+9b</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="ram_is_also_called_as">RAM is also called as:</string>
    <string name="virtual_memory">virtual memory</string>
    <string name="volatile_memory">volatile memory</string>
    <string name="non_volatile_memory">non volatile memory</string>
    <string name="cache_memory">cache memory</string>
    <string name="the_main_memory_of_computer_is_also_called_as">The main memory of computer is also called as:</string>
    <string name="hard_disk">Hard Disk</string>
    <string name="primary_storage">Primary storage</string>
    <string name="secondary_storage">Secondary storage</string>
    <string name="internal_memory">Internal memory</string>
    <string name="how_much_data_can_be_stored_in_a_cd">How much data can be stored in a CD ?</string>
    <string name="_300_mb">300 MB</string>
    <string name="_400_mb">400 MB</string>
    <string name="_500_mb">500 MB</string>
    <string name="_700_mb">700 MB</string>
    <string name="a_program_used_to_detect_overall_system_malfunction_is">A program used to detect overall system malfunction is:</string>
    <string name="system_diagnostics">System diagnostics</string>
    <string name="utilities">Utilities</string>
    <string name="system_analysis">System analysis</string>
    <string name="system_software">System software</string>
    <string name="what_is_the_main_folder_on_a_storage_device_called">What is the main folder on a storage device called?</string>
    <string name="device_driver">Device driver</string>
    <string name="root_directory">Root directory</string>
    <string name="magnetic_disk">Magnetic disk</string>
    <string name="platform">Platform</string>
    <string name="choose_the_word_spelt_correctly">Choose the word spelt correctly.</string>
    <string name="maxculine">Maxculine</string>
    <string name="massculine">Massculine</string>
    <string name="masculine">Masculine</string>
    <string name="macsculine">Macsculine</string>
    <string name="antonym_of_blunt">Antonym of Blunt:</string>
    <string name="easy">Easy</string>
    <string name="lazy">Lazy</string>
    <string name="sharp">Sharp</string>
    <string name="speedy">Speedy</string>
    <string name="synonym_of_exhort">Synonym of Exhort</string>
    <string name="weak_plea">Weak Plea</string>
    <string name="to_urge_strongly">To urge strongly</string>
    <string name="beg">Beg</string>
    <string name="borrow">Borrow</string>
    <string name="we_at_the_party">We ____ at the party.</string>
    <string name="enjoyed_ourself">Enjoyed ourself</string>
    <string name="enjoyed_ourselves">Enjoyed ourselves</string>
    <string name="played_with">Played with</string>
    <string name="none_of_these">None of these</string>
    <string name="choose_a_correct_sentence_below">Choose a correct sentence below.</string>
    <string name="there_are_seven_girls_in_the_class">There are seven girls in the class</string>
    <string name="there_is_seven_girls_in_the_class">There is seven girls in the class</string>
    <string name="there_are_seven_girl_in_the_class">There are seven girl in the class</string>
    <string name="there_is_seven_girl_in_the_class">There is seven girl in the class</string>
    <string name="the_universal_law_of_gravitation_was_propounded_by">The universal law of gravitation was propounded by:</string>
    <string name="kepler">Kepler</string>
    <string name="galileo">Galileo</string>
    <string name="newton">Newton</string>
    <string name="copernicus">Copernicus</string>
    <string name="microphone_is_used_to_convert">Microphone is used to convert:</string>
    <string name="sound_waves_into_electrical_energy">Sound waves into electrical energy</string>
    <string name="sound_waves_into_light_rays">Sound waves into light rays</string>
    <string name="electrical_energy_into_sound_waves">Electrical energy into sound waves</string>
    <string name="steel_is_more_elastic_than_rubber_because">Steel is more elastic than Rubber because</string>
    <string name="its_density_is_high">Its density is high</string>
    <string name="it_is_a_metal">It is a metal</string>
    <string name="ratio_of_stress_to_strain_is_more">Ratio of stress to strain is more</string>
    <string name="ratio_of_stress_to_strain_is_less">Ratio of stress to strain is less</string>
    <string name="the_clear_sky_looks_blue_because">The clear sky looks blue because</string>
    <string name="reflection_of_light">Reflection of light</string>
    <string name="refraction_of_light">Refraction of light</string>
    <string name="diffraction_of_light">Diffraction of light</string>
    <string name="dispersion_of_light">Dispersion of light</string>
    <string name="the_normal_threshold_of_hearing_is_around">The normal threshold of hearing is around</string>
    <string name="_60_80_db">60-80 db</string>
    <string name="_45_60_db">45-60 db</string>
    <string name="_100_120_db">100-120 db</string>
    <string name="_25_45_db">25-45 db</string>
    <string name="sound_waves_into_magnetic_currents">Sound waves into magnetic currents</string>


</resources>